Bug 1242172. Invalidate intrinsic ISizes that depend on viewport BSize when the viewport is resized. r=dbaron

MozReview-Commit-ID: INEHo7ghGyz